# ST-LIB

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  README.md  STM32H723ZGTX_FLASH.ld  STM32H723ZGTX_RAM.ld  setup.env  startup_stm32h723zgtx.s
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-toolchain-image.yml  build.yml  c-cpp.yml  compile-checks.yml  format-checks.yml  tests.yml
Core/Src/Runes/: generated_metadata.cpp
Inc/: ST-LIB.hpp  main.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_conf_template.h
Inc/C++Utilities/: Arena.hpp  CppImports.hpp  CppUtils.hpp  Pool.hpp  RingBuffer.hpp  Stack.hpp  StaticVector.hpp
Inc/HALAL/: ADC2.hpp  HALAL.hpp  NewEthernet.hpp  hal_wrapper.h
Inc/HALAL/Benchmarking_toolkit/: Benchmarking.hpp  HardfaultTrace.h
Inc/HALAL/Benchmarking_toolkit/DataWatchpointTrace/: DataWatchpointTrace.hpp
Inc/HALAL/HardFault/: HardfaultTrace.h
Inc/HALAL/Models/: GPIO.hpp  MPU.hpp  Pin.hpp  SPI2.hpp
Inc/HALAL/Models/BoardID/: BoardID.hpp
Inc/HALAL/Models/Concepts/: Concepts.hpp
Inc/HALAL/Models/DMA/: DMA.hpp  DMA2.hpp
Inc/HALAL/Models/DataStructures/: StackTuple.hpp  TemplatePackFilter.hpp
Inc/HALAL/Models/HALconfig/: HALconfig.hpp
Inc/HALAL/Models/IPV4/: IPV4.hpp
Inc/HALAL/Models/LowPowerTimer/: LowPowerTimer.hpp
Inc/HALAL/Models/MAC/: MAC.hpp
Inc/HALAL/Models/MDMA/: MDMA.hpp
Inc/HALAL/Models/MPUManager/: MPUManager.hpp
Inc/HALAL/Models/Packets/: ForwardOrder.hpp  I2CPacket.hpp  MdmaPacket.hpp  Order.hpp  OrderProtocol.hpp  Packet.hpp  PacketValue.hpp  RawPacket.hpp  SPIOrder.hpp  SPIPacket.hpp
Inc/HALAL/Models/PinModel/: Pin.hpp
Inc/HALAL/Models/SPI/: SPI2.hpp  SPIConfig.hpp
Inc/HALAL/Models/TimerChannelModel/: TimerChannel.hpp
Inc/HALAL/Models/TimerDomain/: TimerDomain.hpp
Inc/HALAL/Models/TimerPeripheral/: TimerPeripheral.hpp
Inc/HALAL/Services/ADC/: ADC.hpp  NewADC.hpp
Inc/HALAL/Services/CORDIC/: CORDIC.hpp
Inc/HALAL/Services/DFSDM/: DFSDM.hpp
Inc/HALAL/Services/DataWatchpointTrace/: DataWatchpointTrace.hpp
Inc/HALAL/Services/DigitalInputService/: DigitalInputService.hpp
Inc/HALAL/Services/DigitalOutputService/: DigitalOutputService.hpp
Inc/HALAL/Services/EXTI/: EXTI.hpp
Inc/HALAL/Services/Encoder/: Encoder.hpp  NewEncoder.hpp
Inc/HALAL/Services/FMAC/: FMAC.hpp
Inc/HALAL/Services/Flash/: Flash.hpp
Inc/HALAL/Services/InfoWarning/: InfoWarning.hpp
Inc/HALAL/Services/InputCapture/: InputCapture.hpp
Inc/HALAL/Services/PWM/: DualPWM.hpp  PWM.hpp
Inc/HALAL/Services/Time/: RTC.hpp  Scheduler.hpp  Time.hpp  TimerWrapper.hpp
Inc/HALAL/Services/Watchdog/: Watchdog.hpp
Inc/HALAL/Utils/: Promise.hpp
Inc/HALALMock/Models/IPV4/: IPV4.hpp
Inc/HALALMock/Models/MAC/: MAC.hpp
Inc/HALALMock/Models/Packets/: ForwardOrder.hpp  Order.hpp
Inc/HALALMock/Models/PinModel/: Pin.hpp
Inc/HALALMock/Services/ADC/: ADC.hpp
Inc/HALALMock/Services/DigitalInputService/: DigitalInputService.hpp
Inc/MockedDrivers/: NVIC.hpp  Register.hpp  common.hpp  compiler_specific.hpp  core_cm7.h  hal_gpio_interface.h  ll_tim_interface.h  mocked_hal_adc.hpp  mocked_hal_dma.hpp  mocked_hal_spi.hpp  mocked_ll_tim.hpp  stm32h723xx_wrapper.h  stm32h7xx_hal.h  stm32h7xx_hal_mock.h  stm32h7xx_hal_wrapper.h  stm32h7xx_ll_adc_wrapper.h  stm32h7xx_ll_tim_wrapper.h  tim_register_definitions.hpp
Inc/Packet_generation/: DataPackets.hpp  Generator.py  Template.hpp  tempCodeRunnerFile.py
Inc/ST-LIB_HIGH/: ST-LIB_HIGH.hpp
Inc/ST-LIB_HIGH/Control/: ControlBlock.hpp  ControlSystem.hpp  FeedbackControlBlock.hpp  SplitterBlock.hpp
Inc/ST-LIB_HIGH/FlashStorer/: FlashStorer.hpp  FlashVariable.hpp
Inc/ST-LIB_HIGH/Protections/: Boundary.hpp  Notification.hpp  Protection.hpp  ProtectionManager.hpp
Inc/ST-LIB_HIGH/SdLogger/: SdLogger.hpp
Inc/ST-LIB_LOW/: DigitalInput2.hpp  DigitalOutput2.hpp  ST-LIB_LOW.hpp
Inc/ST-LIB_LOW/Clocks/: Counter.hpp  Stopwatch.hpp
Inc/ST-LIB_LOW/DigitalOutput/: DigitalOutput.hpp
Inc/ST-LIB_LOW/ErrorHandler/: ErrorHandler.hpp
Inc/ST-LIB_LOW/HalfBridge/: HalfBridge.hpp
Inc/ST-LIB_LOW/Math/: Math.hpp
Inc/ST-LIB_LOW/Sd/: Sd.hpp
Inc/ST-LIB_LOW/Sensors/: AnalogUtils.hpp
Inc/ST-LIB_LOW/StateMachine/: HeapStateOrder.hpp  StackStateOrder.hpp  StateMachine.hpp  StateOrder.hpp
Inc/STM32CubeH7Wrapper/: hal_wrapper.h  stm32h723xx_wrapper.h  stm32h7xx_ll_adc_wrapper.h  stm32h7xx_ll_bus_wrapper.h  stm32h7xx_ll_gpio_wrapper.h  stm32h7xx_ll_tim_wrapper.h
LWIP/App/: lwip.c
Src/: ST-LIB.cpp
Src/HALAL/: HALAL.cpp
Src/HALAL/Benchmarking_toolkit/: Benchmarking.cpp  HardfaultTrace.c
Src/HALAL/HardFault/: HardfaultTrace.c
Src/HALAL/Models/: SPI2.cpp
Src/MockedDrivers/: NVIC.cpp  mocked_hal_adc.cpp  mocked_hal_dma.cpp  mocked_hal_spi.cpp  mocked_ll_tim.cpp  mocked_system_stm32h7xx.c  stm32h723xx_wrapper.c
Src/ST-LIB_HIGH/: ST-LIB_HIGH.cpp
Src/ST-LIB_HIGH/FlashStorer/: FlashStorer.cpp  FlashVariable.cpp
Src/ST-LIB_HIGH/Protections/: Boundary.cpp  ProtectionManager.cpp
Src/ST-LIB_LOW/: ST-LIB_LOW.cpp
Src/ST-LIB_LOW/Clocks/: Counter.cpp  Stopwatch.cpp
Src/ST-LIB_LOW/DigitalOutput/: DigitalOutput.cpp
Src/ST-LIB_LOW/ErrorHandler/: ErrorHandler.cpp
Src/ST-LIB_LOW/HalfBridge/: HalfBridge.cpp
Src/ST-LIB_LOW/Math/: Math.cpp
Src/ST-LIB_LOW/Sd/: Sd.cpp
Src/ST-LIB_LOW/StateMachine/: StateMachine.cpp  StateOrder.cpp
Tests/: ADCTest.cpp  CMakeLists.txt  DigitalInTest.cpp  DigitalOutTest.cpp  DualPWMTest.cpp  EXTITest.cpp  EncoderTest.cpp  HelloTests.cpp  InputCaptureTest.cpp  PWMTest.cpp  adc_test.cpp  dma2_test.cpp  spi2_test.cpp  st-lib-test[1]_include.cmake
Tests/Runes/: SimRunes.cpp
Tests/Time/: common_tests.cpp  find_max_simulation_speed_example.cpp  scheduler_test.cpp  test_time.cpp  timer_wrapper_test.cpp
_codeql_build_dir/: DartConfiguration.tcl
_codeql_build_dir/Tests/: st-lib-test[1]_include.cmake
ci/: Dockerfile
docs/: build-and-presets.md  setup.md  testing.md
tools/: build.py  build.sh  build_simulator.sh  init-submodules.sh  install-git-hooks.sh  run_sim_tests.sh  tar_tests.sh
(+158 files in other folders)
